--- a/history.txt
+++ b/history.txt
@@ -47,3 +47,43 @@ File created: 07/17/2022
 (07/17/2022) check_settingsImproved(): Run
 (07/17/2022) check_settings(): Run
 (07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
+(07/17/2022) logic.gate.not_gate(): Run
+(07/17/2022) check_settingsImproved(): Run
+(07/17/2022) check_settings(): Run
+(07/17/2022) profanityFilter.setup(): Run
